# c-playground

./: .gitignore  CMakeLists.txt
examples/: lilo.c  pointers.c  rsort.c  sieve.c
examples/clash/clash/: clash  plist.c
examples/filo/: filo.c
examples/halde/: Makefile  halde.c  test.c
examples/hello_world/: main.c
examples/patric/: Makefile  patric  patric.c  patric_test  patric_test.c  sema_test.c
examples/rsort/: rsort.bsteam
